<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditMovie">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityMain_tvName"/>
    <EditText
            android:id="@+id/editMovie_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activityMain_etName"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityMain_tvDescription"/>
    <EditText
            android:id="@+id/editMovie_etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activityMain_etDescription"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewMovie_activityMain_tvLanguage"/>
    <RadioGroup
            android:id="@+id/editMovie_radioLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/editMovie_rbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_rbEnglish"/>
        <RadioButton
                android:id="@+id/editMovie_rbChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_rbChinese"/>
        <RadioButton
                android:id="@+id/editMovie_rbMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_rbMalay"/>
        <RadioButton
                android:id="@+id/editMovie_rbTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_rbTamil"/>
    </RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewMovie_activityMain_tvReleaseDate"/>
    <EditText
            android:id="@+id/editMovie_etReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/activityMain_etReleaseDate"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_chkNotSuitableForAudience"
                android:id="@+id/editMovie_chkNotSuitableForAudience"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_chkViolence"
                android:id="@+id/editMovie_chkViolence"
                android:layout_below="@id/editMovie_chkNotSuitableForAudience"
                android:visibility="gone"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_chkLanguage"
                android:id="@+id/editMovie_chkLanguage"
                android:layout_toRightOf="@id/editMovie_chkNotSuitableForAudience"
                android:layout_below="@id/editMovie_chkNotSuitableForAudience"
                android:visibility="gone"/>

    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--<Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_btnAddMovie"
                android:layout_centerInParent="true"
                android:onClick="btnAddMovie"/>-->
    </RelativeLayout>
</LinearLayout>